--- a/index.html
+++ b/index.html
@@ -70,30 +70,30 @@
     <!-- Navbar Start -->
     <nav class="navbar navbar-expand-lg bg-white navbar-light sticky-top py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s">
         <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/icon-1.png" alt="Icon">Arkitektur</h1>
+            <h1 class="text-primary m-0"><img class="me-3" src="img/icons/icon-1.png" alt="Icon">İÇ MİMAR</h1>
         </a>
         <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
             <div class="navbar-nav ms-auto p-4 p-lg-0">
-                <a href="index.html" class="nav-item nav-link active">Home</a>
-                <a href="about.html" class="nav-item nav-link">About</a>
-                <a href="service.html" class="nav-item nav-link">Services</a>
+                <a href="index.html" class="nav-item nav-link active">Ana Sayfa</a>
+                <a href="about.html" class="nav-item nav-link">Hakkımızda</a>
+                <a href="service.html" class="nav-item nav-link">Portofolyo</a>
                 <div class="nav-item dropdown">
-                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
+                    <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Sayfalar</a>
                     <div class="dropdown-menu border-0 m-0">
-                        <a href="feature.html" class="dropdown-item">Our Features</a>
-                        <a href="project.html" class="dropdown-item">Our Projects</a>
-                        <a href="team.html" class="dropdown-item">Team Members</a>
-                        <a href="appointment.html" class="dropdown-item">Appointment</a>
-                        <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                        <a href="404.html" class="dropdown-item">404 Page</a>
+                        <a href="feature.html" class="dropdown-item">Özelliklerimiz</a>
+                        <a href="project.html" class="dropdown-item">Projelerimiz</a>
+                        <a href="team.html" class="dropdown-item">Ekip Üyeleri</a>
+                        <a href="appointment.html" class="dropdown-item"></a>
+                        <a href="testimonial.html" class="dropdown-item"></a>
+                        <a href="404.html" class="dropdown-item"></a>
                     </div>
                 </div>
-                <a href="contact.html" class="nav-item nav-link">Contact</a>
+                <a href="contact.html" class="nav-item nav-link">İletişim</a>
             </div>
-            <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Appointment</a>
+            <a href="" class="btn btn-primary py-2 px-4 d-none d-lg-block">Randevu</a>
         </div>
     </nav>
     <!-- Navbar End -->
@@ -108,9 +108,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                                <h1 class="display-1 text-white animated slideInDown">En İyi İç Mimar Tasarımları</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Evinizin Daha Şık Görünmesi İçin Bizi Tercih Edin</p>
+                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Devam</a>
                             </div>
                         </div>
                     </div>
@@ -122,9 +122,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                                <h1 class="display-1 text-white animated slideInDown">İç Mimarlarımızın Tasaramlarını Kontrol edeip Kendi Tarzınıza Uyun Olanı Seçin</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Sayfalardan Ekip Arkadaşlarımıza Ulaşabilirsiniz.</p>
+                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">DEVAM</a>
                             </div>
                         </div>
                     </div>
@@ -136,9 +136,9 @@
                     <div class="container">
                         <div class="row justify-content-start">
                             <div class="col-10 col-lg-8">
-                                <h1 class="display-1 text-white animated slideInDown">Best Architecture And Interior Design Services</h1>
-                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Vero elitr justo clita lorem. Ipsum dolor at sed stet sit diam no. Kasd rebum ipsum et diam justo clita et kasd rebum sea elitr.</p>
-                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Read More</a>
+                                <h1 class="display-1 text-white animated slideInDown">Hizmetimizden Memnun kalacaksınız</h1>
+                                <p class="fs-5 fw-medium text-white mb-4 pb-3">Pişman olmayacaksınız</p>
+                                <a href="" class="btn btn-primary py-3 px-5 animated slideInLeft">Devam</a>
                             </div>
                         </div>
                     </div>
@@ -158,8 +158,8 @@
                         <div class="fact-icon">
                             <img src="img/icons/icon-2.png" alt="Icon">
                         </div>
-                        <h3 class="mb-3">Design Approach</h3>
-                        <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                        <h3 class="mb-3">Uygulama</h3>
+                        <p class="mb-0">İç Mimarlarımızın yetkin bilgi birikimiyle hazırladığı ları ilk aşamalarından, etütlerden, ergonomi ve ekonomi parametrelerine göre seçilen,....</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
@@ -167,8 +167,9 @@
                         <div class="fact-icon">
                             <img src="img/icons/icon-3.png" alt="Icon">
                         </div>
-                        <h3 class="mb-3">Innovative Solutions</h3>
-                        <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                        <h3 class="mb-3">Proje</h3>
+                        <p class="mb-0"> İç Mimarlık bir mimari mekânın içinde kullanıcılara işlevsel yapısal ve estetik ölçütlere göre en uygun tasarımı sunmak için çözümler üretir...
+                        .</p>
                     </div>
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
@@ -176,8 +177,8 @@
                         <div class="fact-icon">
                             <img src="img/icons/icon-4.png" alt="Icon">
                         </div>
-                        <h3 class="mb-3">Project Management</h3>
-                        <p class="mb-0">Erat ipsum justo amet duo et elitr dolor, est duo duo eos lorem sed diam stet diam sed stet.</p>
+                        <h3 class="mb-3">Tasarım</h3>
+                        <p class="mb-0"> iç mimarlık, bir mimari mekânın içinde kullanıcılara işlevsel yapısal ve estetik ölçütlere göre en uygun tasarımı sunmak için çözümler üretir...</p>
                     </div>
                 </div>
             </div>
