--- a/index.html
+++ b/index.html
@@ -672,7 +672,7 @@
                
                 <div class="col-lg-3 col-md-6">
                     <h3 class="text-light mb-4">Giriş Yap</h3>
-                    <p>sitemize üye olmadıysanız yukarıdan üye olun</p>
+                    <p>sitemize üye olmadıysanız yukarıdan üye olun.</p>
                     <div class="position-relative mx-auto" style="max-width: 400px;">
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">Giriş</button>
